class.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
spec:
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: nginx:alpine
        volumeMounts:
        - name: task
          mountPath: "/var/data"
        ports:
        - containerPort: 80
      volumes:
      - name: task
        configMap:
          name: classapp
          items:
          - key: apps.properties
            path: apps.properties
