birfe.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: birfe
spec:
  selector:
    matchLabels:
      app: birfe
  template:
    metadata:
      labels:
        app: birfe
    spec:
      containers:
      - name: birfe
        image: epauldike/birfe:1
        ports:
        - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: birfe
spec:
  selector:
    app: birfe
  ports:
  - port: 3000
    targetPort: 3000
  type: LoadBalancer
