express.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express
  # namespace: myname
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      restartPolicy: Always
      containers:
      - name: mongo-express
        image: mongo-express
        ports:
        - containerPort: 8081
        # resources:
        #   limits:
        #     memory: "600Mi"
        #     cpu: "600m"
        volumeMounts:
          - name: mypv
            mountPath: /app/data
      volumes:
        - name: mypv
          persistentVolumeClaim:
              claimName: mypvc
       
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express
  namespace: myname
spec:
  selector:
    app: mongo-express
  ports:
  - port: 8081
    targetPort: 8081
    # nodePort: 30000
  type: LoadBalancer
