k8s_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        # resources:
        #   limits:
        #     memory: "1Gi"
        #     cpu: "1G"
        volumeMounts:
          - name: myvol
            mountPath: /app/data
      volumes:
          - name: myvol
            persistentVolumeClaim:
              claimName: mypvc
        
      

---
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30000
  type: LoadBalancer
